<resources>
    <string name="app_name">Brain</string>
    <string name="companyTitle">Brain Wave</string>
    <string name="appTitle">Question Builder</string>
    <string name="nameHint"> Name</string>
    <string name="username_hint">UserName</string>
    <string name="Email_Hint">Email Address</string>
    <string name="phoneNumberHint">Phone Number</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Confirm Password</string>
    <string name="googleSignin">Sign in with google</string>
    <string name="signupText">Sign Up</string>
    <string name="login">Log in</string>
    <string name="alreadyHaveAnAccount">Already have an account ?</string>
    <string name="accountCreation">Create Your Account</string>
    <string name="dontHaveAccount">Dont have an account ?</string>
    <string name="forgetPassword">Forget Password</string>
    <string name="admin_desc">Administrator</string>
    <string name="trainer_desc">Trainer</string>
    <string name="employee_desc">Employee</string>
    <string name="automated">Automated</string>
    <string name="questionBuilder">Question Builder</string>
    <string name="uploadCurriculam">Upload Curriculam</string>
    <string name="viewExistingQuestionBank">View Existing Question Bank</string>
    <string name="Title">Title......</string>
    <string name="countOfQuestion">No. Of Questions</string>
    <string name="aiGeneratedResponse">AI Generated Responses</string>
    <string name="generateQuestion">Generate Questions</string>
    <string name="writeHere">Write Here !!</string>
    <string name="signOut">Sign Out</string>
    <string name="ortext">OR</string>
    <string name="no.of.Question">No.Of.Question</string>
    <string name="sendButton">Send</string>
    <string name="welcomeToBrainWave">Welcome to Brain Wave</string>
    <string name="clientId">372196950592-6s9ci37smaa8kvkoqm5ok9lj8t3jk4jt.apps.googleusercontent.com</string>
    <string name="employee_description">Employee Dashboard for Requesting Question Banks,Self-Assesment, Learning and Development, and Feedback in the Question Builder App</string>
    <string name="trainer_description">Trainer Dashboard for Uploading Curriculum, Generating, Revewing, and Downloading Question Banks in the Question Builder App</string>
    <string name="admin_description">Admin Dashboard for Managing Users,System Performance, Reports, and Settings in the Question Builder App</string>
</resources>