<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/anotherappbackground"
    tools:context=".views.LoginActivity">

    <TextView
        android:id="@+id/loginPageAppText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/companyTitle"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginPageEmail"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="64dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/edit_text_white_background"
        android:hint="@string/Email_Hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPageAppText" />

    <EditText
        android:id="@+id/loginPagePassword"
        android:layout_width="319dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints="password"
        android:background="@drawable/edit_text_white_background"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/loginPageEmail"
        app:layout_constraintStart_toStartOf="@+id/loginPageEmail"
        app:layout_constraintTop_toBottomOf="@+id/loginPageEmail" />

    <Button
        android:id="@+id/loginPageLoginButton"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text_blue_background"
        android:backgroundTint="@null"
        android:padding="10dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginPagePassword"
        app:layout_constraintStart_toStartOf="@+id/loginPagePassword"
        app:layout_constraintTop_toBottomOf="@+id/loginPagePassword" />

    <Button
        android:id="@+id/forgetButton"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@android:color/transparent"
        android:text="@string/forgetPassword"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/loginPageLoginButton"
        app:layout_constraintStart_toStartOf="@+id/loginPageLoginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginPageLoginButton" />

    <TextView
        android:id="@+id/dontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:padding="10dp"
        android:text="@string/dontHaveAccount"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetButton"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/loginPageSignupButton"
        android:layout_width="77dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@android:color/transparent"
        android:text="@string/signupText"
        android:textAllCaps="false"
        android:textColor="@color/skyblue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dontHaveAccount"
        app:layout_constraintTop_toBottomOf="@+id/forgetButton"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>